--- a/styleIngresso.css
+++ b/styleIngresso.css
@@ -40,3 +40,9 @@ button{
     margin-top: 50px;
 
 }
+footer{
+    position: absolute;
+    margin: 0 auto;
+    margin-left: 640px;
+    margin-top: 410px;
+}
