--- a/styleMeia.css
+++ b/styleMeia.css
@@ -26,3 +26,9 @@ h4
     background-color: black;
     color: blueviolet;
 }
+footer{
+    position: absolute;
+    margin: 0 auto;
+    margin-left: 640px;
+    margin-top: 100px;
+}
